...

export const CurrentWeather = ({ city, weather, tempUnit, onPress }: CurrentWeatherProps) => {
  return (
    <>
      <View style={styles.locationHeader}>
        <Text style={styles.cityName}>{city}</Text>
        <Text testID="current-date" style={styles.dateText}>
          {t('todayPrefix')}
          {formatDateFull()}
        </Text>
      </View>

      <View style={styles.heroWrapper}>
...
